Fix Bug update sebelumnya (dark mode nya ngebug)

--- a/sidiktaut_web/frontend/index.css
+++ b/sidiktaut_web/frontend/index.css
@@ -8,7 +8,7 @@
   }
 }
 
-/* Scrollbar Minimalis (Wajib biar rapi) */
+/* Scrollbar Minimalis */
 ::-webkit-scrollbar { width: 8px; }
 ::-webkit-scrollbar-track { background: transparent; }
 ::-webkit-scrollbar-thumb { @apply bg-gray-300 dark:bg-gray-800 rounded-full; }
@@ -33,14 +33,7 @@
   }
 }
 
+/* Fix Glassmorphism Safari */
 [class*="backdrop-blur"] {
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-/* --- PERBAIKAN PERFORMA (Tambahkan ini saja) --- */
-.gpu-mode {
-  transform: translateZ(0);
-  backface-visibility: hidden;
-  will-change: transform, opacity;
-  perspective: 1000px;
 }
